--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   #adds video_player as a dependency
   video_player: ^0.11.1+2
 
+  #adds dependency for loading screen spinner
+  flutter_spinkit: ^5.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
