--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   video_player: ^0.11.1+2
 
   #adds dependency for loading screen spinner
-  flutter_spinkit: ^5.0.0
+  flutter_spinkit: any
 
 dev_dependencies:
   flutter_test:
