--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   flutter:
     sdk: flutter
 
+
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -33,10 +35,13 @@ dependencies:
   image_picker: ^0.7.3
 
   #adds video_player as a dependency
-  video_player: ^0.11.1+2
+  video_player: ^1.0.1
 
   #adds dependency for loading screen spinner
   flutter_spinkit: any
+
+  camera: ^0.8.1
+  splashscreen: ^1.3.5
 
 dev_dependencies:
   flutter_test:
@@ -54,9 +59,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+   - assets/results.mp4
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -69,15 +73,15 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+   - family: Ubuntu
+     fonts:
+       - asset: assets/Ubuntu-Regular.ttf
+       #- asset: assets/Poppins-Light.ttf
   #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+   - family: Chicle
+     fonts:
+       - asset: assets/Chicle-Regular.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
