--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   bubble_tab_indicator: "^0.1.5"
   flutter:
     sdk: flutter
+  dio: ^4.0.0
+  flutter_ffmpeg: ^0.4.0
 
 
 
@@ -65,7 +67,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - assets/results.mp4
-   - google_fonts/
+   - assets/bike.png
+   - assets/car.png
+   - assets/delivery-truck.png
    
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
